--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -89,13 +89,16 @@
         <SwitchPreference
                 android:key="doze"
                 android:title="@string/doze_title"
-                android:summary="@string/doze_summary" />
+                android:summary="@string/doze_summary"
+                android:persistent="false"  />
+
+                <!--android:dependency="doze"-->
+
 
         <cyanogenmod.preference.SystemSettingSwitchPreference
                 android:key="ambient_display_show_battery"
                 android:title="@string/ambient_display_show_battery_title"
                 android:summary="@string/ambient_display_show_battery_summary"
-                android:dependency="doze"
                 android:defaultValue="true" />
 
         <cyanogenmod.preference.RemotePreference
